--- a/index.html
+++ b/index.html
@@ -4,26 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <title>Personal Portfolio</title>
 </head>
 <body>
     <div id="header">
-        <ul class="nav" id="navtable">
+        <div class="container" id="navcontainer">
+            <nav class="nav"  id="navtable">
+                <a href=""  id="name"><h1><span style="color: #913831;">S</span>hirone</h1></a>
+        <ul>
             <li class="nav-item">
-              <a class="nav-link active" href="#" id="navbarlinks">Home</a>
+              <a class="nav-link active" href="#" id="navbarlinks"><span style="color: #913831	">H</span>ome</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarlinks">About</a>
+              <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831;">A</span>bout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarlinks">Portfolio</a>
+              <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831;">P</span>ortfolio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="navbarlinks">Contact</a>
+                <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">C</span>ontact</a>
               </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">G</span>ames</a>
+              </li> 
           </ul>
+        </nav>
+        <div class="header-text">
+            <p>Jr. Software Engineer.</p>
+            <h1>Hi, I'm <span style="color: #913831;">Shirone</span> <br> Fortuno From Philippines.</h1>
+            </div>
+        </div>
+    </div>
+
+    <!--about-->
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="./img/4.jpg" class="aboutmeimg">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="about-title">About Me</h1>
+                    <p>A passionate and dedicated Junior Software Engineer specializing in HTML, CSS, Javascript, Salesforce and Firebase with strong fundamentals in utilizing web development frameworks such as Tailwind and Bootstrap 5. 
+                        Have done several projects involving front and back
+                        end development.</p>
+                        
+                        <div class="tab-titles">
+                            <p class="tab-links"><span style="color: #913831;">S</span>kills</p>
+                            <p class="tab-links"><span style="color: #913831;">E</span>xperience</p>
+                            <p class="tab-links"><span style="color: #913831;">E</span>ducation</p>
+                        </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
