--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
               <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831;">A</span>bout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831;">P</span>ortfolio</a>
+              <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831;">S</span>ervices</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">P</span>ortfolio</a>
+              </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">C</span>ontact</a>
               </li>
@@ -32,7 +35,7 @@
         </nav>
         <div class="header-text">
             <p>Jr. Software Engineer.</p>
-            <h1>Hi, I'm <span style="color: #913831;">Shirone</span> <br> Fortuno From Philippines.</h1>
+            <h1>Hi, I'm <span style="color: #913831;">Shirone</span> Fortuno, <br>  Welcome To My Portfolio.</h1>
             </div>
         </div>
     </div>
@@ -46,18 +49,83 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="about-title">About Me</h1>
-                    <p>A passionate and dedicated Junior Software Engineer specializing in HTML, CSS, Javascript, Salesforce and Firebase with strong fundamentals in utilizing web development frameworks such as Tailwind and Bootstrap 5. 
+                    <h3 class="about-content">A passionate and dedicated Junior Software Engineer specializing in <span>HTML, CSS, Javascript, Salesforce </span> and <br> <span>Firebase</span> with strong fundamentals in utilizing web development frameworks such as <span>Tailwind</span> and <span>Bootstrap 5</span>. <br>
                         Have done several projects involving front and back
-                        end development.</p>
+                        end development.</h3>
                         
                         <div class="tab-titles">
-                            <p class="tab-links"><span style="color: #913831;">S</span>kills</p>
-                            <p class="tab-links"><span style="color: #913831;">E</span>xperience</p>
-                            <p class="tab-links"><span style="color: #913831;">E</span>ducation</p>
+                            <p class="tab-links active-link" onclick="opentab('skills')"><span>S</span>kills</p>
+                            <p class="tab-links" onclick="opentab('experience')"><span>E</span>xperience</p>
+                            <p class="tab-links" onclick="opentab('education')"><span>E</span>ducation</p>
+                        </div>
+                        
+                        <div class="tab-contents active-tab" id="skills">
+                            <ul>
+                                <li><span>Front End</span><br>HTML, CSS, Javascript, React.</li>
+                                <li><span>Back End</span><br>PHP.</li>
+                                <li><span>Database</span><br>MySQL, Firebase.</li>
+                                <li><span>CRM</span><br>Salesforce.</li>
+                            </ul>
+                        </div>
+
+                        <div class="tab-contents" id="experience">
+                            <ul>
+                                <li><span>Kodego Bootcamp</span><br>November 2022 - Febuary 2023</li>
+                                <li><span>Customer Service Representative</span><br>SOW Philippines Fullfillment Inc. (PAYO)
+                                    | 2019 - 2021</li>
+                                <li><span>Customer Service Representative</span><br>Call2Connect Solutions Inc. 
+                                    | 2016 - 2017</li>
+                            </ul>
+                        </div>
+
+                        <div class="tab-contents" id="education">
+                            <ul>
+                                <li><span>Bachelor of Science in Information Technology</span><br>Cavite State University |  2012-2015 
+                                    Undergraduate</li>
+                            </ul>
                         </div>
                 </div>
             </div>
         </div>
     </div>
+<!--services-->
+        <div id="services">
+            <div class="container">
+                <h1 class="sub-title">My Services</h1>
+                <div class="services-list">
+                    <div>
+                        <h2>Web Design</h2>
+                        <p>ahahahahahhahahahhhhhhhhhhhhhhhhh</p>
+                        <a href="">learn more</a>
+                    </div>
+                    <div>
+                        <h2>App Design</h2>
+                        <p>ahahahahahhahahahhhhhhhhhhhhhhhhh</p>
+                        <a href="">learn more</a>
+                    </div>
+                    <div>
+                        <h2>App Design</h2>
+                        <p>ahahahahahhahahahhhhhhhhhhhhhhhhh</p>
+                        <a href="">learn more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <script>
+        var tablinks = document.getElementsByClassName("tab-links");
+        var tabcontents = document.getElementsByClassName("tab-contents");
+
+        function opentab(tabname){
+            for(tablink of tablinks){
+                tablink.classList.remove("active-link");
+             }
+            for(tabcontent of tabcontents){
+                tabcontent.classList.remove("active-tab");
+            }
+            event.currentTarget.classList.add("active-link");
+            document.getElementById(tabname).classList.add("active-tab");
+        }
+    </script>
 </body>
 </html>
