adding my services contents

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="index.css">
     <title>Personal Portfolio</title>
 </head>
@@ -54,12 +55,12 @@
                         end development.</h3>
                         
                         <div class="tab-titles">
-                            <p class="tab-links active-link" onclick="opentab('skills')"><span>S</span>kills</p>
+                            <p class="tab-links active-link" onclick="opentab('education')"><span>E</span>ducation</p>
+                            <p class="tab-links" onclick="opentab('skills')"><span>S</span>kills</p>
                             <p class="tab-links" onclick="opentab('experience')"><span>E</span>xperience</p>
-                            <p class="tab-links" onclick="opentab('education')"><span>E</span>ducation</p>
                         </div>
                         
-                        <div class="tab-contents active-tab" id="skills">
+                        <div class="tab-contents" id="skills">
                             <ul>
                                 <li><span>Front End</span><br>HTML, CSS, Javascript, React.</li>
                                 <li><span>Back End</span><br>PHP.</li>
@@ -70,15 +71,15 @@
 
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>Kodego Bootcamp</span><br>November 2022 - Febuary 2023</li>
-                                <li><span>Customer Service Representative</span><br>SOW Philippines Fullfillment Inc. (PAYO)
-                                    | 2019 - 2021</li>
+                                <li><span>Kodego Bootcamp</span><br>Kodego | November 2022 - Febuary 2023</li>
+                                <li><span>Customer Service Representative</span><br>SOW Philippines Fulfillment Inc. (PAYO)
+                                    | March 2019 - March 2021</li>
                                 <li><span>Customer Service Representative</span><br>Call2Connect Solutions Inc. 
-                                    | 2016 - 2017</li>
+                                    | January 2016 - January 2017</li>
                             </ul>
                         </div>
 
-                        <div class="tab-contents" id="education">
+                        <div class="tab-contents  active-tab" id="education">
                             <ul>
                                 <li><span>Bachelor of Science in Information Technology</span><br>Cavite State University |  2012-2015 
                                     Undergraduate</li>
@@ -90,20 +91,23 @@
     </div>
 <!--services-->
         <div id="services">
-            <div class="container">
+            <div class="container-fluid">
                 <h1 class="sub-title">My Services</h1>
                 <div class="services-list">
                     <div>
+                        <i class="fa-solid fa-code"></i>
                         <h2>Web Design</h2>
                         <p>ahahahahahhahahahhhhhhhhhhhhhhhhh</p>
                         <a href="">learn more</a>
                     </div>
                     <div>
+                        <i class="fa-solid fa-crop-simple"></i>
                         <h2>App Design</h2>
                         <p>ahahahahahhahahahhhhhhhhhhhhhhhhh</p>
                         <a href="">learn more</a>
                     </div>
                     <div>
+                        <i class="fa-brands fa-app-store-ios"></i>
                         <h2>App Design</h2>
                         <p>ahahahahahhahahahhhhhhhhhhhhhhhhh</p>
                         <a href="">learn more</a>
