--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
                 <a href=""  id="name"><h1><span style="color: #913831;">S</span>hirone</h1></a>
         <ul>
             <li class="nav-item">
-              <a class="nav-link active" href="#" id="navbarlinks"><span style="color: #913831	">H</span>ome</a>
+              <a class="nav-link active" href="#home" id="navbarlinks"><span style="color: #913831	">H</span>ome</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831;">A</span>bout</a>
+              <a class="nav-link" href="#about" id="navbarlinks"><span style="color: #913831;">A</span>bout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831;">S</span>ervices</a>
+              <a class="nav-link" href="#services" id="navbarlinks"><span style="color: #913831;">S</span>ervices</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">P</span>ortfolio</a>
+                <a class="nav-link" href="#portfolio" id="navbarlinks"><span style="color: #913831">P</span>ortfolio</a>
               </li>
             <li class="nav-item">
                 <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">C</span>ontact</a>
@@ -71,7 +71,6 @@
 
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>Kodego Bootcamp</span><br>Kodego | November 2022 - Febuary 2023</li>
                                 <li><span>Customer Service Representative</span><br>SOW Philippines Fulfillment Inc. (PAYO)
                                     | March 2019 - March 2021</li>
                                 <li><span>Customer Service Representative</span><br>Call2Connect Solutions Inc. 
@@ -81,6 +80,7 @@
 
                         <div class="tab-contents  active-tab" id="education">
                             <ul>
+                                <li><span>Kodego Bootcamp</span><br>Kodego | November 2022 - Febuary 2023</li>
                                 <li><span>Bachelor of Science in Information Technology</span><br>Cavite State University |  2012-2015 
                                     Undergraduate</li>
                             </ul>
@@ -111,6 +111,38 @@
                         <h2>App Design</h2>
                         <p>ahahahahahhahahahhhhhhhhhhhhhhhhh</p>
                         <a href="">learn more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--portfolio-->
+        <div id="portfolio">
+            <div class="container">
+                <h1 class="sub-title">My Work</h1>
+                <div class="work-list">
+                    <div class="work">
+                        <img src="./img/work1.png" alt="">
+                        <div class="layer">
+                            <h3>Social Media App</h3>
+                            <p>Social Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media App</p>
+                        <a href="https://majorproject2.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./img/work2.png" alt="">
+                        <div class="layer">
+                            <h3>Social Media App</h3>
+                            <p>Social Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media App</p>
+                        <a href="https://majorproject2.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+                    </div>
+                    <div class="work">
+                        <img src="./img/work3.png" alt="">
+                        <div class="layer">
+                            <h3>Social Media App</h3>
+                            <p>Social Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media App</p>
+                        <a href="https://majorproject2.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
