finished portfolio section

--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
                         </div>
                     </div>
                 </div>
+                <a href="#" class="btn">See more</a>
             </div>
         </div>
-
+<!--contact-->
+        
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
