adding contact page

--- a/index.html
+++ b/index.html
@@ -12,31 +12,28 @@
     <div id="header">
         <div class="container" id="navcontainer">
             <nav class="nav"  id="navtable">
-                <a href=""  id="name"><h1><span style="color: #913831;">S</span>hirone</h1></a>
+                <a href=""  id="name"><h1><span>S</span>hirone</h1></a>
         <ul>
             <li class="nav-item">
-              <a class="nav-link active" href="#home" id="navbarlinks"><span style="color: #913831	">H</span>ome</a>
+              <a class="nav-link active" href="#home" id="navbarlinks"><span>H</span>ome</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about" id="navbarlinks"><span style="color: #913831;">A</span>bout</a>
+              <a class="nav-link" href="#about" id="navbarlinks"><span>A</span>bout</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#services" id="navbarlinks"><span style="color: #913831;">S</span>ervices</a>
+              <a class="nav-link" href="#services" id="navbarlinks"><span>S</span>ervices</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#portfolio" id="navbarlinks"><span style="color: #913831">P</span>ortfolio</a>
+                <a class="nav-link" href="#portfolio" id="navbarlinks"><span>P</span>ortfolio</a>
               </li>
             <li class="nav-item">
-                <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">C</span>ontact</a>
+                <a class="nav-link" href="#" id="navbarlinks"><span>C</span>ontact</a>
               </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#" id="navbarlinks"><span style="color: #913831">G</span>ames</a>
-              </li> 
           </ul>
         </nav>
         <div class="header-text">
             <p>Jr. Software Engineer.</p>
-            <h1>Hi, I'm <span style="color: #913831;">Shirone</span> Fortuno, <br>  Welcome To My Portfolio.</h1>
+            <h1>Hi, I'm <span style="color: orange;">Shirone</span> Fortuno, <br>  Welcome To My Portfolio.</h1>
             </div>
         </div>
     </div>
@@ -123,8 +120,9 @@
                     <div class="work">
                         <img src="./img/work1.png" alt="">
                         <div class="layer">
-                            <h3>Social Media App</h3>
-                            <p>Social Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media AppSocial Media App</p>
+                            <h3>Food Delivery & Ordering App</h3>
+                            <p> Using API, administrators can log in and upload new products using an admin account in real time. 
+                                Customers can place, add and remove orders which exhibits accurate sum and total quantity of orders placed in the cart.</p>
                         <a href="https://majorproject2.vercel.app/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -149,7 +147,31 @@
             </div>
         </div>
 <!--contact-->
-        
+        <div id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="contact-left">
+                        <h1 class="sub-title">Contact Me</h1>
+                        <p><i class="fa-solid fa-paper-plane"></i> Shironebfortuno@gmail.com</p>
+                        <p><i class="fa-solid fa-phone"></i> +63-995-718-2778</p>
+                        <div class="social-icons">
+                            <a href=""> <i class="fa-brands fa-facebook"></i> </a>
+                            <a href=""> <i class="fa-brands fa-linkedin-in"></i> </a>
+                            <a href=""> <i class="fa-brands fa-github"></i> </a>
+                        </div>
+                    </div>
+                    <div class="contact-right">
+                    <form action="">
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit">Submit</button>
+                    </form>
+                   </div>
+                </div>
+            </div>
+        </div>
+
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
