added cv download

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="about-title">About Me</h1>
-                    <h3 class="about-content">A passionate and dedicated Junior Software Engineer specializing in <span>HTML, CSS, Javascript, Salesforce </span> and <br> <span>Firebase</span> with strong fundamentals in utilizing web development frameworks such as <span>Tailwind</span> and <span>Bootstrap 5</span>. <br>
+                    <h3 class="about-content">A passionate and dedicated Junior Software Engineer specializing in <span>HTML, CSS, Javascript, Salesforce </span> and <br> <span>Google Firebase</span> with strong fundamentals in utilizing web development frameworks such as <span>Tailwind</span> and <span>Bootstrap 5</span>. <br>
                         Have done several projects involving front and back
                         end development.</h3>
                         
@@ -159,6 +159,7 @@
                             <a href=""> <i class="fa-brands fa-linkedin-in"></i> </a>
                             <a href=""> <i class="fa-brands fa-github"></i> </a>
                         </div>
+                        <a href="img/WD29 Kode Breakers CV.pdf" download class="btn btn2">Download Cv</a>
                     </div>
                     <div class="contact-right">
                     <form action="">
